--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@ body {
     padding: 0;
     overflow-x: hidden; /* Prevent horizontal scrolling */
 }
+.bodyalign{
+    padding: 25px;
+    margin: 20px;
+
+}
 .gallery-container {
     width: 100%;
     overflow-x: scroll; /* Enable horizontal scrolling */
@@ -84,73 +89,73 @@ body {
     padding-left: 30px;
     padding-right: 30px;
   }
-  .footer__item-content {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    width: 100%;
-    padding: 20px 0;
-}
-
-.footer-heading {
-    font-size: 20px;
-    font-weight: bold;
-    color: #293036;
-    margin-bottom: 10px;
-}
-
-.footer-list {
-    list-style: none;
-    padding: 0;
-}
-
-.footer-list li {
-    margin-bottom: 5px;
-}
-
-.footer-list li a {
-    color: #6d6d6d;
-    text-decoration: none;
-}
-
-.footer-list li a:hover {
-    color: #293036;
-}
-
-.footer-logo img {
-    width: 100px;
-    height: auto;
-}
-
-.signup-heading {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-    color: #293036;
-}
-
-.input-block {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end; /* Align input block to the right */
-}
-
-.input-block input {
-    width: 250px;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.input-block button {
-    margin-left: 10px;
-    background-color: #293036;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-}
+  
 .pic{
   align-items: center;
 }
 
+footer {
+    background-color: #eff4f7;
+    padding: 10px 0;
+  }
+  
+  .footer-content {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .footer-section {
+    flex: 1;
+    padding: 0 20px;
+  }
+  
+  .footer-section h3 {
+    margin-bottom: 10px;
+    color: #333;
+  }
+  
+  .footer-section ul {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .footer-section ul li {
+    margin-bottom: 5px;
+  }
+  
+  .footer-section ul li a {
+    color: #666;
+    text-decoration: none;
+  }
+  
+  .footer-section ul li a:hover {
+    color: #333;
+  }
+  
+  .subscribe-form {
+    display: flex;
+    align-items: center;
+  }
+  
+  .subscribe-form input[type="email"] {
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    margin-right: 10px;
+  }
+  
+  .subscribe-form button {
+    padding: 10px 20px;
+    background-color: #333;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+  }
+  
+  .subscribe-form button:hover {
+    background-color: #555;
+  }
+  
